[tool.poetry]
name = "majsoul-rpa"
version = "0.0.1"
description = "A Robotic Process Automation (RPA) framework for Mahjong Soul (雀魂)"
authors = ["Cryolite <cryolite.indigo@gmail.com>"]
homepage = "https://github.com/Cryolite/majsoul-rpa"
readme = "README.md"
keywords = ["mahjong", "Mahjong Soul", "Majsoul", "automation", "RPA"]
packages = [{include = "majsoul_rpa"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.33.2"
docker = "^6.1.3"
opencv-python = "^4.8.1.78"
Pillow = "^10.1.0"
protobuf = "^4.25.1"
redis = "^5.0.1"
selenium = "^4.15.2"
PyYAML = "^6.0.1"
PyGetWindow = "^0.0.9"
PyAutoGUI = "^0.9.54"
jsonschema = "^4.20.0"
ewmh = "^0.1.6"
numpy = "^1.26.2"
kanachan = {git = "https://github.com/Cryolite/kanachan.git"}
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre-install = "install_scripts:pre_install"
post-install = "install_scripts:post_install"

